Website Complete With Theme

--- a/LoLHomeDark.html
+++ b/LoLHomeDark.html
@@ -13,20 +13,20 @@
 
 </div>
 
-<div style="width:650px;width:650px;margin:10px auto;text-align:center;font-size:2.5em">
+<div style="width:650px;width:650px;margin:10px auto;text-align:center;font-size:2.5em;color:#000000;">
 <b>What is League of Legends?</b>
 </div>
 
 
-<div style="padding:8px;background-color:#FFFFFF;border:2px black solid;border-radius:15px;font-size:1.2em;font-family:corbel;width:50%;margin:auto;">
+<div style="padding:8px;background-color:#000000;color:#FFFFFF;border:2px black solid;border-radius:15px;font-size:1.2em;font-family:corbel;width:50%;margin:auto;">
 
-<table cellpadding="3" width="400" style="margin:10px auto; background-color:#FFFFFF;border:2px black solid; border-radius:5px;font-size:1em;">
+<table cellpadding="3" width="400" style="margin:10px auto; background-color:#000000;color:#FFFFFF;border:2px #FFFFFF solid; border-radius:5px;font-size:1em;">
 <tr>
-<th style="background-color:#396492;">Home</th>
-<th><a href="Step1.html" style="text-decoration:none;color:#000000;">Step 1</a></th>
-<th><a href="Step2.html" style="text-decoration:none;color:#000000;">Step 2</a></th>
-<th><a href="Step3.html" style="text-decoration:none;color:#000000;">Step 3</a></th>
-<th><a href="Step4.html" style="text-decoration:none;color:#000000;">Step 4</a></th>
+<th style="background-color:#396492;color:#FFFFFF;">Home</th>
+<th><a href="Step1Dark.html" style="text-decoration:none;color:#FFFFFF;">Step 1</a></th>
+<th><a href="Step2Dark.html" style="text-decoration:none;color:#FFFFFF;">Step 2</a></th>
+<th><a href="Step3Dark.html" style="text-decoration:none;color:#FFFFFF;">Step 3</a></th>
+<th><a href="Step4Dark.html" style="text-decoration:none;color:#FFFFFF;">Step 4</a></th>
 </tr>
 </table>
 
@@ -41,10 +41,10 @@ LoL also falls into the classification of an <i>e-sport</i>. There are different
 <br style="clear:both;size:500px;height:8px;background-color:#000000;" />
 
 <div>
-	<table cellpadding="3" width="400" style="margin:10px auto; background-color:#FFFFFF;border:2px black solid; border-radius:5px;font-size:1em;">
+	<table cellpadding="3" width="400" style="margin:10px auto; background-color:#000000;border:2px white solid; border-radius:5px;font-size:1em;">
 		<tr>
-			<th style="background-color:#396492;">Light</th>
-			<th><a href="LoLHomeDark.html" style="text-decoration:none;color:#000000;">Dark</a></th>
+			<th><a href="index.html" style="text-decoration:none;color:#FFFFFF;">Light</th>
+			<th style="background-color:#396492;"><a href="LoLHomeDark.html" style="text-decoration:none;color:#000000;">Dark</a></th>
 		</tr>
 	</table>
 </div>
@@ -53,7 +53,7 @@ LoL also falls into the classification of an <i>e-sport</i>. There are different
 
 <br />
 
-<div style="background-color:#FFFFFF;width:300px;height:85px;margin:auto;border-radius:15px;padding:px;border:2px black solid;">
+<div style="background-color:#000000;color:#FFFFFF;width:300px;height:85px;margin:auto;border-radius:15px;padding:px;border:2px black solid;">
 
 <p style="font-family:corbel;text-align:center">
 Website made by: Daven McClellan <br />
