--- a/Step4Dark.html
+++ b/Step4Dark.html
@@ -19,15 +19,15 @@
 
 
 
-<div style="padding:8px;background-color:#FFFFFF;border:2px black solid; border-radius:15px;font-size:1.2em;font-family:corbel;width:50%;margin:auto;">
+<div style="padding:8px;background-color:#000000;color:#FFFFFF;border:2px black solid; border-radius:15px;font-size:1.2em;font-family:corbel;width:50%;margin:auto;">
 
-<table cellpadding="3" width="400" style="margin:10px auto; background-color:#FFFFFF;border:2px black solid; border-radius:5px;">
+<table cellpadding="3" width="400" style="margin:10px auto; background-color:#000000;color:#FFFFFF;border:2px #FFFFFF solid; border-radius:5px;font-size:1em;">
 <tr>
-<th><a href="index.html" style="text-decoration:none;color:#000000;">Home</a></th>
-<th><a href="Step1.html" style="text-decoration:none;color:#000000;">Step 1</a></th>
-<th><a href="Step2.html" style="text-decoration:none;color:#000000;">Step 2</th>
-<th ><a href="Step3.html" style="text-decoration:none;color:#000000;">Step 3</a></th>
-<th style="background-color:#396492;">Step 4</th>
+<th><a href="LoLHomeDark.html" style="text-decoration:none;color:#FFFFFF;">Home</th>
+<th><a href="Step1Dark.html" style="text-decoration:none;color:#FFFFFF;">Step 1</a></th>
+<th><a href="Step2Dark.html" style="text-decoration:none;color:#FFFFFF;">Step 2</a></th>
+<th><a href="Step3Dark.html" style="text-decoration:none;color:#FFFFFF;">Step 3</a></th>
+<th style="background-color:#396492;color:#FFFFFF;">Step 4</a></th>
 </tr>
 </table>
 
@@ -60,19 +60,21 @@ The two final objectives are Baron and Rift Herald. The Rift Herald will spawn i
 <br style="clear:both;size:500px;height:8px;background-color:#000000;" />
 
 <div>
-	<table cellpadding="3" width="400" style="margin:10px auto; background-color:#FFFFFF;border:2px black solid; border-radius:5px;font-size:1em;">
+	<table cellpadding="3" width="400" style="margin:10px auto; background-color:#000000;border:2px white solid; border-radius:5px;font-size:1em;">
 		<tr>
-			<th style="background-color:#396492;">Light</th>
-			<th><a href="Step4Dark.html" style="text-decoration:none;color:#000000;">Dark</a></th>
+			<th><a href="Step4.html" style="text-decoration:none;color:#FFFFFF;">Light</th>
+			<th style="background-color:#396492;"><a href="LoLHomeDark.html" style="text-decoration:none;color:#000000;">Dark</a></th>
 		</tr>
 	</table>
 </div>
 
 </div>
 
+</div>
+
 <br />
 
-<div style="background-color:#FFFFFF;width:300px;margin:auto;border-radius:15px;padding:3px;border:2px black solid;">
+<div style="background-color:#000000;color:#FFFFFF;width:300px;height:85px;margin:auto;border-radius:15px;padding:px;border:2px black solid;">
 
 <p style="font-family:corbel;text-align:center">
 Website made by: Daven McClellan <br />
